fix content wrapper on mobile

--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -5,7 +5,7 @@
 
 @media screen and (max-width:1020px) {
     .Content {
-        width: 100%;
+        width: auto;
         margin-left: 8px;
     }
 }
@@ -14,5 +14,6 @@
     .Content {
         margin-top: 30px;
         margin-bottom: 50px;
+        width: auto;
     }
 }
